[gd_scene load_steps=4 format=3 uid="uid://clmqvuer8ehnq"]

[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="1_j1x35"]
[ext_resource type="Script" path="res://items_workshop/item_inspector/tabs/animations.gd" id="2_mpu2k"]
[ext_resource type="PackedScene" uid="uid://doo03nnqpthbc" path="res://items_workshop/item_inspector/points_editor/points_editor.tscn" id="5_h73dv"]

[node name="Animations" type="MarginContainer"]
offset_right = 375.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_j1x35")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("2_mpu2k")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="PointsEditor" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_h73dv")]
unique_name_in_owner = true
layout_mode = 2

[node name="PreviewButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Preview"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Mech Movement"
vertical_alignment = 1

[node name="MechMovementOptions" type="OptionButton" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Ornaments" type="PanelContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"InsetPanel"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Ornaments"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Ornaments/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Ornaments/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Ornaments/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ornaments"

[node name="AddOrnamentButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Ornaments/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "+"

[node name="OrnamentsList" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Ornaments/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Projectiles" type="PanelContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"InsetPanel"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Projectiles"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Projectiles/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Projectiles/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Projectiles/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Projectiles"

[node name="AddProjectileButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Projectiles/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "+"

[node name="ProjectilesList" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Projectiles/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
